--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
     "axios": "^0.20.0",
     "bootstrap": "^4.5.3",
     "react": "^16.14.0",
-    "react-ace": "^9.1.4",
+    "react-ace": "^9.2.0",
     "react-bootstrap": "^1.4.0",
     "react-dom": "^16.14.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.3"
+    "react-scripts": "3.4.3",
+    "spinners-react": "^1.0.4"
   },
   "scripts": {
     "start": "react-scripts start",
