--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "^16.14.0",
     "react-ace": "^9.2.0",
     "react-bootstrap": "^1.4.0",
+    "react-cool-tabs": "^1.1.6",
     "react-dom": "^16.14.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
