--- a/package.json
+++ b/package.json
@@ -42,5 +42,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+"engines": {
+	"node": "10.15.0",
+"npm": "6.14.4" 
+}
 }
