--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-highlight-words": "^0.17.0",
+    "react-html-parser": "^2.0.2",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
@@ -42,9 +43,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-"engines": {
-	"node": "10.15.0",
-"npm": "6.14.4" 
-}
+  }
 }
