--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
     "axios": "^0.21.1",
     "jwt-decode": "^3.1.2",
     "moment": "^2.29.1",
-    "react": "^17.0.1",
+    "react": "^17.0.2",
+    "react-ace": "^9.4.0",
+    "react-custom-scroll": "^4.2.2",
     "react-dom": "^17.0.1",
     "react-highlight-words": "^0.17.0",
     "react-html-parser": "^2.0.2",
+    "react-intl": "^5.16.0",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
@@ -24,7 +27,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "extract": "formatjs extract",
+    "compile": "formatjs compile"
   },
   "eslintConfig": {
     "extends": [
@@ -43,5 +48,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@formatjs/cli": "^4.2.8"
   }
 }
