--- a/package.json
+++ b/package.json
@@ -3,20 +3,28 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/icons": "^4.6.2",
+    "@fortawesome/fontawesome-svg-core": "^1.2.35",
+    "@fortawesome/free-solid-svg-icons": "^5.15.3",
+    "@fortawesome/react-fontawesome": "^0.1.14",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.3",
     "@testing-library/user-event": "^12.6.0",
     "antd": "^4.10.3",
     "axios": "^0.21.1",
+    "bootstrap": "^5.0.0",
     "jwt-decode": "^3.1.2",
     "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-ace": "^9.4.0",
+    "react-bootstrap": "^1.6.0",
     "react-custom-scroll": "^4.2.2",
     "react-dom": "^17.0.1",
+    "react-fontawesome": "^1.7.1",
     "react-highlight-words": "^0.17.0",
     "react-html-parser": "^2.0.2",
     "react-intl": "^5.16.0",
+    "react-meta-tags": "^1.0.1",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
