--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "react-syntax-highlighter": "^15.4.3",
     "react-xarrows": "^1.6.1",
     "underscore": "^1.12.0",
     "web-vitals": "^0.2.4"
